--- a/src/pages/ZohoConsulting.css
+++ b/src/pages/ZohoConsulting.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('../assets/images/ZOHO.png'); /* Update path if needed */
+  background-image: url('../assets/images/Zoho-bg.png'); /* Update path if needed */
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
